# wshowkeys_rs

./: .gitignore  ARCH.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  hyprland-window-rules.conf  test_all_functions.sh  test_keybuffer.sh  test_mvp.sh
.github/: copilot-instructions.md
docs/: architecture.md  wayland-fixes-applied.md  wayland-implementation-analysis.md  wayland-protocol.md
examples/: test_evdev.rs  test_input.rs  test_png_render.rs
shaders/: text.wgsl
src/: app.rs  config.rs  display.rs  egui_render.rs  events.rs  input.rs  keypress.rs  lib.rs  main.rs  main_simple.rs  render.rs  renderer.rs  utils.rs  wayland.rs
src/display/: layout.rs  mod.rs  overlay.rs  window.rs
src/input/: evdev.rs  hyprland.rs  mod.rs  parser.rs  wayland.rs
src/render/: animations.rs  gpu.rs  mod.rs  text.rs  themes.rs
src/render/shaders/: fragment.wgsl  vertex.wgsl
tests/: integration_tests.rs
