[package]
name = "wshowkeys_rs"
version = "1.1.0"
edition = "2021"
authors = ["isomo <jiahaoxiang2000@gmail.com>"]
description = "A Rust implementation of wshowkeys - displays keystrokes on screen using global input capture"
license = "GPL-3.0"
keywords = ["input", "keylogger", "display", "evdev", "linux"]
categories = ["multimedia", "gui"]

[[bin]]
name = "wshowkeys_rs"
path = "src/main.rs"

# [[bin]]
# name = "wshowkeys_rs_simple"
# path = "src/main_simple.rs"

# [[bin]]
# name = "wshowkeys_rs_wayland_test"
# path = "src/main_wayland_test.rs"

# [[bin]]
# name = "wshowkeys_rs_input_test"
# path = "src/main_input_test.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Input handling (global capture via evdev)
evdev = "0.12"

# GPU rendering
wgpu = "0.19"
winit = "0.29"

# Text rendering
wgpu_glyph = "0.20"
fontdue = "0.7"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Directories for config paths
dirs = "5.0"

# Hyprland IPC (fallback input method)
hyprland = "0.3"

# JSON parsing
serde_json = "1.0"

# Additional system dependencies
fontdb = "0.16"
raw-window-handle = "0.6"

# Event handling
crossbeam-channel = "0.5"

# Image processing (for tests)
image = "0.24"

# Wayland support
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
