[package]
name = "wshowkeys_rs"
version = "1.1.0"
edition = "2021"
authors = ["isomo <jiahaoxiang2000@gmail.com>"]
description = "A Rust implementation of wshowkeys - displays keystrokes on screen using global input capture"
license = "GPL-3.0"
keywords = ["input", "keylogger", "display", "evdev", "linux"]
categories = ["multimedia", "gui"]

[[bin]]
name = "wshowkeys_rs"
path = "src/main.rs"
