[package]
name = "wshowkeys_rs"
version = "1.2.0"
edition = "2021"
authors = ["isomo <jiahaoxiang2000@gmail.com>"]
description = "A Rust implementation of wshowkeys - displays keystrokes on screen using global input capture"
license = "GPL-3.0"
keywords = ["input", "keylogger", "display", "evdev", "linux"]
categories = ["multimedia", "gui"]

[[bin]]
name = "wshowkeys_rs"
path = "src/main.rs"

[dependencies]
# Input handling
evdev = "0.12"
tokio = { version = "1.0", features = ["full"] }

# Window management and rendering
eframe = "0.28"
egui = "0.28"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
